// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createNewProject > assets 1`] = `
[
  ".changeset/config.json",
  ".dockerignore",
  ".editorconfig",
  ".gitattributes",
  ".github/FUNDING.yml",
  ".github/ISSUE_TEMPLATE/bug_report.yml",
  ".github/ISSUE_TEMPLATE/config.yml",
  ".github/workflows/ci.yml",
  ".github/workflows/release.yml",
  ".gitignore",
  ".husky/commit-msg",
  ".husky/pre-commit",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  "CODE_OF_CONDUCT.md",
  "commitlint.config.ts",
  "CONTRIBUTING.md",
  "Dockerfile",
  "eslint.config.js",
  "gitignore",
  "LICENSE",
  "lint-staged.config.js",
  "monorepo.config.ts",
  "netlify.toml",
  "package.json",
  "pnpm-workspace.yaml",
  "renovate.json",
  "SECURITY.md",
  "stylelint.config.js",
  "tsconfig.json",
  "turbo.json",
  "vitest.config.ts",
  "vitest.workspace.ts",
]
`;

exports[`createNewProject > createNewProject demo cli case 1`] = `
[
  ".gitignore",
  "bin/index.js",
  "dev/index.ts",
  "package.mock.json",
  "src/cli.ts",
  "src/index.ts",
  "tsconfig.json",
  "tsup.config.ts",
]
`;

exports[`createNewProject > createNewProject demo client case 1`] = `
[
  ".gitignore",
  "eslint.config.js",
  "index.html",
  "package.mock.json",
  "public/vite.svg",
  "src/App.vue",
  "src/main.ts",
  "src/pages/index.vue",
  "src/router/index.ts",
  "src/stores/i18n.ts",
  "src/stores/index.ts",
  "src/style.css",
  "src/trpc/index.ts",
  "src/vite-env.d.ts",
  "tsconfig.app.json",
  "tsconfig.json",
  "tsconfig.node.json",
  "tsconfig.worker.json",
  "vite.config.ts",
  "worker/app.ts",
  "worker/config.ts",
  "worker/fetch-entry.ts",
  "worker/node-entry.ts",
  "worker/trpc-router.ts",
  "wrangler.jsonc",
]
`;

exports[`createNewProject > createNewProject demo default case 1`] = `
[
  "build.config.ts",
  "package.mock.json",
  "src/index.ts",
  "src/utils.ts",
  "test/index.test.ts",
  "tsconfig.json",
  "vitest.config.ts",
]
`;

exports[`createNewProject > createNewProject demo server case 1`] = `
[
  ".gitignore",
  "package.mock.json",
  "src/app.ts",
  "src/config.ts",
  "src/fetch-entry.ts",
  "src/node-entry.ts",
  "test/index.test.ts",
  "tsconfig.json",
  "tsup.config.ts",
  "vitest.config.ts",
  "wrangler.jsonc",
]
`;

exports[`createNewProject > createNewProject demo tsup case 1`] = `
[
  "build.config.ts",
  "package.mock.json",
  "src/index.ts",
  "test/index.test.ts",
  "tsconfig.json",
  "tsup.config.ts",
  "vitest.config.ts",
]
`;

exports[`createNewProject > createNewProject demo unbuild case 1`] = `
[
  "build.config.ts",
  "package.mock.json",
  "src/index.ts",
  "src/utils.ts",
  "test/index.test.ts",
  "tsconfig.json",
  "vitest.config.ts",
]
`;

exports[`createNewProject > createNewProject demo vue-ui case 1`] = `
[
  ".gitignore",
  "eslint.config.js",
  "index.html",
  "lib/HelloWorld.vue",
  "lib/index.ts",
  "package.mock.json",
  "src/App.vue",
  "src/main.ts",
  "src/pages/index.vue",
  "src/router/index.ts",
  "src/style.css",
  "src/vite-env.d.ts",
  "test/index.test.ts",
  "tsconfig.app.json",
  "tsconfig.json",
  "tsconfig.node.json",
  "tsconfig.test.json",
  "vite.config.ts",
  "vite.shared.config.ts",
  "vitest.config.ts",
]
`;

exports[`createNewProject > createNewProject demo website case 1`] = `
[
  ".gitignore",
  ".vitepress/config.ts",
  ".vitepress/theme/index.ts",
  ".vitepress/theme/tailwind.css",
  "index.md",
  "monorepo/index.md",
  "monorepo/manage.md",
  "monorepo/publish.md",
  "package.mock.json",
  "public/logo.jpg",
  "thinking.md",
  "tools/changeset.md",
  "tools/husky.md",
  "tools/lint-staged.md",
  "tools/pnpm.md",
  "tools/renovate.md",
  "tools/turborepo.md",
  "why/assets/npm-dt.svg",
  "why/assets/npm-ts.svg",
  "why/examples/0.npm-basic-package/index.js",
  "why/examples/0.npm-basic-package/package.json",
  "why/examples/1.npm-basic-package/index.cjs",
  "why/examples/1.npm-basic-package/index.d.ts",
  "why/examples/1.npm-basic-package/index.js",
  "why/examples/1.npm-basic-package/package.json",
  "why/examples/2.npm-basic-package/package-lock.json",
  "why/examples/2.npm-basic-package/package.json",
  "why/examples/2.npm-basic-package/README.md",
  "why/examples/2.npm-basic-package/rename-ext.js",
  "why/examples/2.npm-basic-package/src/index.ts",
  "why/examples/2.npm-basic-package/tsconfig.cjs.json",
  "why/examples/2.npm-basic-package/tsconfig.esm.json",
  "why/examples/2.npm-basic-package/tsconfig.json",
  "why/examples/3.npm-basic-package/build.config.ts",
  "why/examples/3.npm-basic-package/package-lock.json",
  "why/examples/3.npm-basic-package/package.json",
  "why/examples/3.npm-basic-package/README.md",
  "why/examples/3.npm-basic-package/src/index.ts",
  "why/examples/3.npm-basic-package/tsconfig.json",
  "why/examples/3.npm-basic-package/tsup.config.ts",
  "why/examples/usage-cjs/cjs.cjs",
  "why/examples/usage-cjs/esm.mjs",
  "why/examples/usage-cjs/index.js",
  "why/examples/usage-cjs/package-lock.json",
  "why/examples/usage-cjs/package.json",
  "why/examples/usage-esm/cjs.cjs",
  "why/examples/usage-esm/createRequire.js",
  "why/examples/usage-esm/esm.mjs",
  "why/examples/usage-esm/index.js",
  "why/examples/usage-esm/package-lock.json",
  "why/examples/usage-esm/package.json",
  "why/how-to-reuse-js-code.md",
  "why/index.md",
  "why/js-cjs-mjs.md",
  "why/js-keywords.md",
  "why/modern/bundlers.md",
  "why/modern/dts.md",
  "why/modern/esm-vs-cjs.md",
  "why/modern/index.md",
  "why/modern/package-entry-points.md",
  "why/modern/typescript.md",
  "why/publish-basic-npm-package.md",
  "why/what-is-npm-package.md",
]
`;

exports[`createNewProject > upgradeMonorepo 1`] = `
[
  ".changeset/config.json",
  ".dockerignore",
  ".editorconfig",
  ".gitattributes",
  ".github/FUNDING.yml",
  ".github/ISSUE_TEMPLATE/bug_report.yml",
  ".github/ISSUE_TEMPLATE/config.yml",
  ".github/workflows/ci.yml",
  ".github/workflows/release.yml",
  ".gitignore",
  ".husky/commit-msg",
  ".husky/pre-commit",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  "CODE_OF_CONDUCT.md",
  "commitlint.config.ts",
  "CONTRIBUTING.md",
  "Dockerfile",
  "eslint.config.js",
  "LICENSE",
  "lint-staged.config.js",
  "monorepo.config.ts",
  "netlify.toml",
  "pnpm-workspace.yaml",
  "renovate.json",
  "SECURITY.md",
  "stylelint.config.js",
  "tsconfig.json",
  "turbo.json",
  "vitest.config.ts",
]
`;
